# crate-data-go

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  go.mod  go.sum  meson.build
cmd/: main.go
cmd/service-mysql/: main.go
document/: dev-image-steps.md
middleware/: header.go  request.go
repository/: mysql-repo.go  postgres-repo.go  repo.go  sqlite-repo.go
router/: route-mysql.go  route-postgres.go  route-sqlite.go
schema/: RFC9457.go
script/: run-linux.sh  run-windows.cmd
scripts/: podman-build.ps1  podman-dev.ps1  run-build.ps1  run-dev.ps1
service/: application-service.go
utility/: http.go  ksuid.go  mysql.go  postgres.go  slogger.go  sqlite.go  zap-logger.go
